--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Other
+*.txt
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,images,video
